--- a/app/src/main/res/layout/item_section_footer.xml
+++ b/app/src/main/res/layout/item_section_footer.xml
@@ -4,22 +4,24 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    >
 
     <TextView
         android:id="@+id/tv_look_num"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:layout_marginRight="10dp"
         android:layout_marginLeft="55dp"
         android:layout_marginTop="8dp"
+        android:gravity="center_vertical"
         android:text="TextView"
         android:textSize="12sp"
-        android:gravity="center_vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.52"
         tools:text="浏览0"/>
 </android.support.constraint.ConstraintLayout>
